--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-animated-text-builders": "^1.1.0",
     "react-bootstrap": "^2.0.0-rc.1",
@@ -19,11 +20,12 @@
     "react-tabs": "^3.2.2",
     "react-typing-animation": "^1.6.2",
     "react-typing-text-animation": "^1.0.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",   
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
