--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-animated-text-builders": "^1.1.0",
@@ -20,6 +21,9 @@
     "react-tabs": "^3.2.2",
     "react-typing-animation": "^1.6.2",
     "react-typing-text-animation": "^1.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
+    "sweetalert2": "^11.1.9",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
