--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.1",
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-animated-text-builders": "^1.1.0",
     "react-bootstrap": "^2.0.0-rc.1",
@@ -19,6 +20,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.2",
+    "react-transition-group": "^1.2.1",
     "react-typing-animation": "^1.6.2",
     "react-typing-text-animation": "^1.0.0",
     "semantic-ui-css": "^2.4.1",
