--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nerdyxils.github.io/Silas-Abiodun_Portfolio",
+  "homepage": "https://silas-abiodun.vercel.app/",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
