--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "resolutions": {
     "react-dom": "^17.0.2"
   },
