--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
+    "react-animated-text-builders": "^1.1.1",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
     "react-external-link": "^1.2.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "react-tabs": "^3.2.2",
-    "react-transition-group": "^1.2.1",
+    "react-transition-group": "^4.4.5",
     "react-typing-animation": "^1.6.2",
     "react-typing-text-animation": "^1.0.0",
     "semantic-ui-css": "^2.4.1",
