--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-scripts": "5.0.1",
     "react-tabs": "^3.2.2",
     "react-transition-group": "^4.4.5",
-    "react-typing-animation": "^1.6.2",
-    "react-typing-text-animation": "^1.0.0",
+    "react-type-animation": "3.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
     "sweetalert2": "^11.1.9",
