--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
-    "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^6.5.1",
     "react": "^17.0.2",
     "react-animated-text-builders": "^1.1.1",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
     "react-external-link": "^1.2.2",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "react-tabs": "^3.2.2",
