--- a/package.json
+++ b/package.json
@@ -1,8 +1,30 @@
 {
-  "homepage": "https://silas-abiodun.vercel.app/",
-  "name": "my-portfolio",
+  "homepage": "https://silasabiodun.com/",
+  "name": "silas-abiodun-portfolio",
   "version": "1.1.1",
   "private": true,
+  "description": "Professional portfolio of Silas Abiodun - Techpreneur, Web Developer, and Project Manager. Founder of BrandGoto, specializing in AI-driven business automation and brand acceleration systems.",
+  "keywords": [
+    "Silas Abiodun",
+    "Techpreneur", 
+    "Web Developer",
+    "Project Manager",
+    "BrandGoto",
+    "AI Automation",
+    "Brand Acceleration",
+    "Ontario Canada",
+    "React Portfolio",
+    "Business Automation"
+  ],
+  "author": {
+    "name": "Silas Abiodun",
+    "email": "contact@silasabiodun.com",
+    "url": "https://silasabiodun.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/silasabiodun/silas-abiodun-portfolio"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
