--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://silasabiodun.com/",
+  "homepage": "https://www.silasabiodun.com/",
   "name": "silas-abiodun-portfolio",
   "version": "1.1.1",
   "private": true,
@@ -19,7 +19,7 @@
   "author": {
     "name": "Silas Abiodun",
     "email": "contact@silasabiodun.com",
-    "url": "https://silasabiodun.com"
+    "url": "https://www.silasabiodun.com"
   },
   "repository": {
     "type": "git",
